--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,21 +1,22 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<%= form_for @contact do |f| %>
-		<div class="form-group">
-			<%= f.label :name %>
-			<%= f.text_field :name, class: "form-control" %>
+		<div class="well">
+			<%= form_for @contact do |f| %>
+			<div class="form-group">
+				<%= f.label :name %>
+				<%= f.text_field :name, class: "form-control" %>
+			</div>
+
+			<div class="form-group">
+				<%= f.label :email %>
+				<%= f.email_field :email, class: "form-control" %>
+
+				<%= f.label :comments %>
+				<%= f.text_area :comments, class: "form-control" %>
+			</div>
+
+			<%= f.submit "Submit", class: 'btn btn-default btn-lg' %> 
 		</div>
-
-		<div class="form-group">
-			<%= f.label :email %>
-			<%= f.email_field :email, class: "form-control" %>
-
-			<%= f.label :comments %>
-			<%= f.text_area :comments, class: "form-control" %>
-		</div>
-
-		<%= f.submit "Submit", class: 'btn btn-default btn-lg' %> 
+			<% end %>
 	</div>
-		<% end %>
-
 </div>
