--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,19 @@
 	<h1>Welcome to Dev Match</h1> 
 	<h3>A membership development site for developers and entrepreneurs </h3>
 </div>
+<div class="row">
+	<div class="col-md-6">
+		<div class="well">
+			<h2> Basic Membership </h2>
+			<h4> Sign up for free and get basic membership account.</h4>
+			<br>
+				<%= link_to "Sign up for free", new_user_registration_path, class: 'btn btn-danger btn-lg btn-block' %>
+		</div>
+	</div>
+	<div class="col-md-6">
+		<div class="well">
+			<h2> Premium Membership </h2>
+			<h4> Sign up for Premium account for 10$/monthand get community information </h4>
+				<%= link_to "Sign up for Pro", new_user_registration_path, class: 'btn btn-warning btn-lg btn-block' %>
+		</div>
+	</div>
