--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,13 +8,13 @@
 			<h2> Basic Membership </h2>
 			<h4> Sign up for free and get basic membership account.</h4>
 			<br>
-				<%= link_to "Sign up for free", new_user_registration_path, class: 'btn btn-danger btn-lg btn-block' %>
+				<%= link_to "Sign up for free", new_user_registration_path(plan: @basic_plan.id) , class: 'btn btn-danger btn-lg btn-block' %>
 		</div>
 	</div>
 	<div class="col-md-6">
 		<div class="well">
 			<h2> Premium Membership </h2>
 			<h4> Sign up for Premium account for 10$/monthand get community information </h4>
-				<%= link_to "Sign up for Pro", new_user_registration_path, class: 'btn btn-warning btn-lg btn-block' %>
+				<%= link_to "Sign up for Pro", new_user_registration_path(plan: @premium_plan.id) , class: 'btn btn-primary btn-lg btn-block' %>
 		</div>
 	</div>
