Added title to registration page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,3 +22,15 @@ body {
 	background: -webkit-linear-gradient(to left, #F09819 , #EDDE5D); /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to left, #F09819 , #EDDE5D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+.pink {
+	background-color: #ff75fc;
+}
+
+.blue {
+	background-color: #89acff;
+}
+
+.grey {
+ 	background-color: #bfbfbf ;
+}
