--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,19 @@
 
-<div class="row">
+<div class="row ">
+   <div class="col-md-4 col-md-offset-4 grey well">
+     <% if params[:plan] == '2' %>
+    
+   <h1 class="text-center ">Pro Account
+    </h1>
+    <p class="text-center"> Sign up for free and get basic membership account.</p>
+  </div>
+    <% else %>
+    <h1 class="text-center">Basic Account</h1><p class="text-center"> Sign up for Premium account for 10$/monthand get community information </p>
+  </div>
+    <% end %>
+  </div>
+</div>
+
   <div class="col-md-4 col-md-offset-4">
     <div class="well">
       <h2>Sign up</h2>
