--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
 <%= link_to "Create your  profile", new_user_profile_path(current_user) if current_user %>
 
+<% if current_user %>
+	<h1> Welcome to Match Dev! </h1>
+<% else %>
 <div class="jumbotron text-center">
 	<h1>Welcome to Dev Match</h1> 
 	<h3>A membership development site for developers and entrepreneurs </h3>
@@ -20,3 +23,4 @@
 				<%= link_to "Sign up for Pro", new_user_registration_path(plan: @premium_plan.id) , class: 'btn btn-primary btn-lg btn-block' %>
 		</div>
 	</div>
+<% end %>
