--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
 	<div class="col-md-6">
 		<div class="well">
 			<h2> Premium Membership </h2>
-			<h4> Sign up for Premium account for 10$/monthand get community information </h4>
+			<h4> Sign up for Premium account for 10$/month and get community information </h4>
 				<%= link_to "Sign up for Pro", new_user_registration_path(plan: @premium_plan.id) , class: 'btn btn-primary btn-lg btn-block' %>
 		</div>
 	</div>
