--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,1 +1,12 @@
-<h1> Form for user to create profile. </h1>
+<div class="row">
+	<div class="col-md-6 col-md-offset 3">
+		<h1 class="text-center"> Create Your Profile </h1>
+		<p class="text-center"> Be a part of the Dev Match community and fill out your profile! </p>
+		<div class = "well" >
+			<%= form_for @profile, url: user_profile_path do |f| %>
+
+			<% end %>
+		</div>
+
+	</div> 
+</div>
