Created a new action in profiles controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,22 @@
 <%= @user %>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3 well">
+		<div class="row">
+			<h1> <%= @user.profile.first_name %>  <%= @user.profile.last_name %> 
+			</h1>
+		</div>
+		<div class="row">
+			<h4>
+			<strong> Type: </strong>
+			<%= @user.profile.job_title %>
+			<br>
+			<% if current_user.id == 2  %>
+			<%= @user.profile.phone_number %>
+			<%= @user.profile.contact_email %>
+			<% end %>
+			<strong>Description: </strong><%= @user.profile.description %> 
+			<br>
+		</h4>
+		</div>
+	</div>
+</div>
