--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3 well">
 		<div class="row">
+			<%= image_tag @user.profile.avatar.url %>
+
 			<h1> <%= @user.profile.first_name %>  <%= @user.profile.last_name %> 
 			</h1>
 		</div>
