Added images and icons for profiles

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,29 @@
 <div class="row">
-	<div class="col-md-6 col-md-offset-3 well">
-		<div class="row">
+
+<div class="col-md-8 col-md-offset-2 well">
+			<h1 class="text-center"> <%= @user.profile.first_name %>  <%= @user.profile.last_name %> 
+			</h1>
+</div>
+<div class="row">
+<div class="col-md-2 col-md-offset-2 text-cen">
 			<%= image_tag @user.profile.avatar.url %>
 
-			<h1> <%= @user.profile.first_name %>  <%= @user.profile.last_name %> 
-			</h1>
 		</div>
+	<div class="col-md-6 well">
+		
 		<div class="row">
-			<h4>
-			<strong> Type: </strong>
+			<h3>
+			<span class="job-title-icon">
+				<%= job_title_icon %>
+			</span>
+			
 			<%= @user.profile.job_title %>
-			<br>
+			</h3>
 			<% if current_user.id == 2  %>
-			<%= @user.profile.phone_number %>
+			<p><%= @user.profile.phone_number %>
 			<%= @user.profile.contact_email %>
-			<% end %>
-			<strong>Description: </strong><%= @user.profile.description %> 
+			<% end %> </p>
+			<p><%= @user.profile.description %> </p>
 			<br>
 		</h4>
 		</div>
