Changed the avatar border so it looks nicer

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,3 +8,16 @@
 	color: white;
 	text-align: center;
 }
+
+.user-profile{
+	 color: #333;
+	 background-color: #5cb85c;
+     border-color: #4cae4c;
+}
+
+.user-avatar {
+	border: 2px solid black;
+	border-radius: 4px;
+	 background-color: black;
+
+}
