--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -11,7 +11,7 @@
 
 .user-profile{
 	 color: #333;
-	 background-color: #5cb85c;
+	 background-color: #85f8e5;
      border-color: #4cae4c;
 }
 
@@ -20,4 +20,14 @@
 	border-radius: 4px;
 	 background-color: black;
 
+}
+
+#job-title {
+	color: white;
+	text-align: center;
+}
+
+.white-left {
+	color: white;
+	text-align: left;	
 }
