--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,34 @@
 <div class="row">
-
-<div class="col-md-8 col-md-offset-2 well">
-			<h1 class="text-center"> <%= @user.profile.first_name %>  <%= @user.profile.last_name %> 
-			</h1>
+	<div class="col-md-8 col-md-offset-2 well user-gradient">
+			<h1 class="text-center "> <%= @user.profile.first_name %>  <%= @user.profile.last_name %> </h1>
+	</div>
 </div>
-<div class="row">
-<div class="col-md-2 col-md-offset-2 text-center">
-		<%= image_tag @user.profile.avatar.url, class: "user-avatar" %> 
 
-		</div>
+<div class="row">
+	<div class="col-md-2 col-md-offset-2 text-center">
+		<%= image_tag @user.profile.avatar.url, class: "user-avatar" %> 
+	</div>
 	<div class="col-md-6 ">
-		
 		<div>
-			<h3  class="row text-center">  
+			<h3>  
 				<span class="job-title-icon"> <%= job_title_icon %> </span>
 				 <span id="job-title"> <%= @user.profile.job_title %> </span>
 			</h3>
-		
-			<% if current_user.id == 2  %>
-			<div class="white-left">
-				<h4><i class="fa fa-phone white-center"></i> <%= @user.profile.phone_number %> </h4>
-				<h5> <i class="fa fa-at white-center"></i><%= @user.profile.contact_email %> </h5>
+		</div>
+		<div> 
+			<% if current_user.plan_id == 2  %>
+			<div class="contact-info well profile-block">
+					<h3 class="text-center"> Contact Info </h3>
+					<h4><i class="fa fa-phone white-center"></i> <%= @user.profile.phone_number %> </h4>
+					<h4> <i class="fa fa-at white-center"></i><%= @user.profile.contact_email %> </h4>
 			</div>
 			<% end %> 
+		</div>
 
-			<div class="user-profile well user-profile">
+			<div class="user-profile well profile-block">
+				<h3 class="text-center"> Description </h3>
 				<p><%= @user.profile.description %> </p>
 			</div>
 
-		</div>
 	</div>
 </div>
