Changed the user interface of the profile

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -10,15 +10,17 @@
 }
 
 #job-title {
-	color: #190A05;
+	color: white;
 	text-align: center;
 }
 
 .user-gradient {
-	background: #780206; /* fallback for old browsers */
-	background: -webkit-linear-gradient(to left, #780206 , #061161); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to left, #780206 , #061161); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color: white;    
+
+
+	background: #FFEEEE; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to left, #FFEEEE , #DDEFBB); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #FFEEEE , #DDEFBB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    color: #333;
 }
 
 .profile-block{
@@ -34,9 +36,9 @@
 }
 
 .user-avatar {
-	border: 2px solid black;
-	border-radius: 4px;
-	 background-color: black;
+    border: 1px solid white;
+    border-radius: 100px;
+    box-shadow: -1px 9px 8px 0px rgba(255,255,255,1);
 
 }
 
