--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,13 +16,14 @@
 			</h3>
 		</div>
 		<div> 
-			<% if current_user.plan_id == 2  %>
+			<% if current_user.plan_id == 2 || current_user.id == @user.id %>
 			<div class="contact-info well profile-block">
 					<h3 class="text-center"> Contact Info </h3>
 					<h4><i class="fa fa-phone white-center"></i> <%= @user.profile.phone_number %> </h4>
 					<h4> <i class="fa fa-at white-center"></i><%= @user.profile.contact_email %> </h4>
 			</div>
-			<% end %> 
+
+			<% end %>  
 		</div>
 
 			<div class="user-profile well profile-block">
