Added the edit page to update customer profile

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -14,14 +14,7 @@
 	text-align: center;
 }
 
-.user-gradient {
 
-
-	background: #FFEEEE; /* fallback for old browsers */
-	background: -webkit-linear-gradient(to left, #FFEEEE , #DDEFBB); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to left, #FFEEEE , #DDEFBB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
-    color: #333;
-}
 
 .profile-block{
 	 color: #333;
@@ -36,6 +29,8 @@
 }
 
 .user-avatar {
+	height: 128px;
+	width: 128px;
     border: 1px solid white;
     border-radius: 100px;
     box-shadow: -1px 9px 8px 0px rgba(255,255,255,1);
