--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,9 @@
 					<h3 class="text-center"> Contact Info </h3>
 					<h4><i class="fa fa-phone white-center"></i> <%= @user.profile.phone_number %> </h4>
 					<h4> <i class="fa fa-at white-center"></i><%= @user.profile.contact_email %> </h4>
+
+					<h3><span class="label label-danger">Premium</span></h3>
+						
 			</div>
 
 			<% end %>  
